# kp-matmul-bench

./: README.adoc
10-doc/: README.adoc  main.adoc
10-doc/figures/: mm.drawio
30-go-impl/: README.adoc  go.mod  main  main.go
30-go-impl/matrix/: matrix.go  matrix_test.go
40-c-omp-impl/: .gitignore  CMakeLists.txt  README.adoc  main.c
40-c-omp-impl/args/: args.c  args.h
40-c-omp-impl/cmake-modules/: CodeCoverage.cmake
40-c-omp-impl/format/: format.c  format.h
40-c-omp-impl/matrix/: matrix.c  matrix.h
40-c-omp-impl/test/: test.cpp
